...
    </plurals>

    <string name="kaleyra_call_info_rec">Rec</string>
    <string name="kaleyra_call_info_recording">This call will be recorded</string>
    <string name="kaleyra_call_info_ongoing_recording">This call is being recorded</string>
    <string name="kaleyra_action_dismiss">Dismiss</string>
    <string name="kaleyra_action_cancel">Cancel</string>
    <string name="kaleyra_action_discard_changes">Discard changes</string>
    <string name="kaleyra_action_confirm">Confirm</string>
    <string name="kaleyra_data_loss_confirm_message">Are you sure?\nAll data will be lost.</string>
    <string name="kaleyra_call_hangup">Hangup</string>
    <string name="kaleyra_call_answer">Participate</string>
    <string name="kaleyra_call_failed">Call failed</string>
...
    <string name="kaleyra_fileshare_file_cancelled">File cancelled</string>
    <string name="kaleyra_max_bytes_dialog_descr">It is allowed to share files up to 150 MB</string>
    <string name="kaleyra_max_bytes_dialog_title">File share limit</string>
    <string name="kaleyra_fileshare_open_file">Open file</string>

    <!-- FEEDBACK -->
    <string name="kaleyra_feedback_vote">Vote</string>
    <string name="kaleyra_feedback_close">Close</string>
    <string name="kaleyra_feedback_evaluate_call">Please rate the quality of your call</string>
    <string name="kaleyra_feedback_bad">Awful</string>
    <string name="kaleyra_feedback_poor">Poor</string>
    <string name="kaleyra_feedback_neutral">Neutral</string>
    <string name="kaleyra_feedback_good">Good</string>
    <string name="kaleyra_feedback_excellent">Excellent</string>
    <string name="kaleyra_feedback_leave_a_comment">Leave a comment &#8230;</string>
    <string name="kaleyra_feedback_rating_bar_descr">Rating</string>
    <string name="kaleyra_feedback_see_you_soon">We hope to see you again soon.</string>
    <string name="kaleyra_feedback_thank_you">Thank you for your feedback!</string>

    <!-- RECORDING -->
...
