...
private val StarSpacing = 36.dp
private val SliderWidth = 220.dp

/**
 * Star Slider Tag
 */
val StarSliderTag = "StarSliderTag"

@Composable
internal fun StarSlider(
    value: Float,
    onValueChange: (Float) -> Unit,
    levels: Int,
...
